force-app/main/default/objects/Experience__c/fields/isCurrentOrg__c.field-meta.xml
<CustomField>
    <fullName>isCurrentOrg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if its current Organisation.</description>
    <label>isCurrentOrg</label>
    <type>Checkbox</type>
</CustomField>