force-app/main/default/objects/Experience__c/fields/Role_Description__c.field-meta.xml
<CustomField>
    <fullName>Role_Description__c</fullName>
    <label>Role Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>