force-app/main/default/objects/Experience__c/recordTypes/Educational_Institutions.recordType-meta.xml
<RecordType>
    <fullName>Educational_Institutions</fullName>
    <active>true</active>
    <description>Intended for Educational Institution Accounts</description>
    <label>Educational Institutions</label>
</RecordType>