force-app/main/default/objects/Experience__c/recordTypes/Employers.recordType-meta.xml
<RecordType>
    <fullName>Employers</fullName>
    <active>true</active>
    <description>Intended for Employer Accounts</description>
    <label>Employers</label>
</RecordType>